--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,12 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
+  flutter_launcher_icons: "^0.7.3"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/background.png"
 
 
 # For information on the generic Dart part of this file, see the
