Change app name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: bmi calculator
+name: bmi_calculator
 description: Calculate your body mass index.
 
 # The following defines the version and build number for your application.
