--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: bmi_calculator
-description: Calculate your body mass index.
+name: weightloss_mate
+description: We help you to lose weight.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,6 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  path_provider: 1.6.10
+  sqflite: 1.3.1
+  path: 1.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
