--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   path_provider: 1.6.10
   sqflite: 1.3.1
   path: 1.7.0
+  font_awesome_flutter: 8.8.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
